After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 764486 - Fix "format not a string literal" error
Fix "format not a string literal" error
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: plugins
unspecified
Other All
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2016-04-02 09:52 UTC by Bastien Nocera
Modified: 2016-06-27 12:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
jamendo: Fix "format not a string literal" error (4.82 KB, patch)
2016-04-02 09:52 UTC, Bastien Nocera
committed Details | Review
tmdb: Fix "format not a string literal" error (1.77 KB, patch)
2016-04-02 09:52 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2016-04-02 09:52:49 UTC
.
Comment 1 Bastien Nocera 2016-04-02 09:52:53 UTC
Created attachment 325210 [details] [review]
jamendo: Fix "format not a string literal" error
Comment 2 Bastien Nocera 2016-04-02 09:52:59 UTC
Created attachment 325211 [details] [review]
tmdb: Fix "format not a string literal" error
Comment 3 Bastien Nocera 2016-04-05 11:03:20 UTC
Attachment 325210 [details] pushed as 98a9f60 - jamendo: Fix "format not a string literal" error
Attachment 325211 [details] pushed as 21430d9 - tmdb: Fix "format not a string literal" error
Comment 4 Bastien Nocera 2016-06-27 12:23:59 UTC
And pushed to 0.2.x as well