jamendo: Fix "format not a string literal" error

https://bugzilla.gnome.org/show_bug.cgi?id=764486